<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_card_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtBalanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/money_placeholder"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAccountNumber"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_number"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_number_placeholder"
        android:textColor="@color/white"
        android:textStyle="bold"/>


</androidx.appcompat.widget.LinearLayoutCompat>